The task items alignment got fixed

--- a/src/Components/Data/CheckBox.css
+++ b/src/Components/Data/CheckBox.css
@@ -6,7 +6,7 @@
   font-weight: 500;
 }
 .theCheckBoxContainer {
-  margin: 0px 25px 0px 0px;
+  margin: 0px 15px 0px 0px;
   display: flex;
   flex-flow: row nowrap;
 }
@@ -15,7 +15,7 @@
   border-width: 3.5px;
   border-style: solid;
   width: 40px;
-  height: 100%;
+  height: 40px;
   justify-content: center;
   border-radius: 100%;
   position: relative;
